<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="42sp"
            android:textStyle="bold"/>

        <include layout="@layout/layout_5red_star"/>

        <Button
            android:id="@+id/btn_classic"
            android:layout_width="@dimen/home_activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/classic_mode"/>

        <Button
            android:id="@+id/btn_extra"
            android:layout_width="@dimen/home_activity_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/extra_mode"/>

        <Button
            android:id="@+id/btn_time"
            android:layout_width="@dimen/home_activity_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/time_mode"/>

        <Button
            android:id="@+id/btn_best_score"
            android:layout_width="@dimen/home_activity_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/best_score"/>

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="@dimen/home_activity_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/quit"/>
    </LinearLayout>


    <include layout="@layout/layout_ads"/>
</LinearLayout>
