<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/best_score_bg"
    android:orientation="vertical">

    <include layout="@layout/layout_ads_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/classic_mode"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/classic_best_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/extra_mode"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/extra_best_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/time_mode"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/time_best_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>
